cabal-version:      2.4
name:               marble
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             vspecky
maintainer:         sattarde9913@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable marble
    main-is:          Main.hs

    other-modules:
        Interpreter
      , Interpreter.Environment
      , Interpreter.Error
      , Interpreter.Std
      , Parser
      , Parser.AST
      , Parser.Error
      , Parser.Tracker
      , Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0
      , containers == 0.6.6
      , transformers
      , template-haskell
    hs-source-dirs:   src
    ghc-options: -Wno-missing-home-modules
    default-language: Haskell2010
